--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,21 +8,18 @@
     <title>Professional monitor headphones|ATH-mx50x</title>
     <link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
     <header>
         <div class="header">
-            <div class="logo"><svg xmlns="http://www.w3.org/2000/svg" 
-                class="icon icon-tabler icon-tabler-headphones" 
-                width="44" height="44" 
-                viewBox="0 0 24 24" 
-                stroke-width="1.5" stroke="#E5E7EB" 
-                fill="none" 
-                stroke-linecap="round" stroke-linejoin="round">
-                <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
-                <rect x="4" y="13" rx="2" width="5" height="7" />
-                <rect x="15" y="13" rx="2" width="5" height="7" />
-                <path d="M4 15v-3a8 8 0 0 1 16 0v3" />
-              </svg></div>
+            <div class="logo"><svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-headphones"
+                    width="80" height="80" viewBox="0 0 24 24" stroke-width="1.5" stroke="#E5E7EB" fill="none"
+                    stroke-linecap="round" stroke-linejoin="round">
+                    <path stroke="none" d="M0 0h24v24H0z" fill="none" />
+                    <rect x="4" y="13" rx="2" width="5" height="7" />
+                    <rect x="15" y="13" rx="2" width="5" height="7" />
+                    <path d="M4 15v-3a8 8 0 0 1 16 0v3" />
+                </svg></div>
             <div class="links">
                 <ul>
                     <li><a href="#">Header Link one</li></a>
@@ -31,6 +29,59 @@
             </div>
         </div>
     </header>
-    
+    <div class="main-one">
+        <div class="hero">
+            <div class="hero-main">
+                <p>This website is awesome</p>
+            </div>
+            <div class="hero-secondary">
+                <p>This website has some subtext that goes here under the main title. It's a smaller font and the color
+                    is lower contrast</p>
+            </div>
+            <button type="button" class="sign-up">Sign Up</button>
+
+        </div>
+        <div class="hero-img">
+            <div class="img"><img class="hero-img" src="./images/pexels-garrett-morrow-1649771.jpg"></div>
+        </div>
+    </div>
+    <div class="main-two">
+        <div class="info">Some random information.</div>
+        <div class="four-img">
+            <div class="card">
+                <img class="card-img" src="./images/pexels-jessica-lewis-creative-2918997.jpg">
+                <img class="card-img" src="./images/pexels-wallace-chuck-3587478.jpg">
+                <img class="card-img" src="./images/pexels-garrett-morrow-610945.jpg">
+                <img class="card-img" src="./images/pexels-wallace-chuck-3587475.jpg">
+            </div>
+            <div class="sub-text">
+                <p class="sub">this is some subtext under an illustration or image</p>
+                <p class="sub">this is some subtext under an illustration or image</p>
+                <p class="sub">this is some subtext under an illustration or image</p>
+                <p class="sub">this is some subtext under an illustration or image</p>
+            </div>
+        </div>
+    </div>
+    <div class="main-three">
+        <div class="quote">
+            <P>This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe
+                people will actually read it. Who knows? All I know is that it looks nice.</P>
+        </div>
+        <div class="author">
+            -Thor, God of Thunder
+        </div>
+    </div>
+    <div class="main-four">
+        <div class="cta">
+            <div class="top-cta">Call to action! It's time!</div>
+            <p>Sign up for our product by clicking that button right over there!</p>
+        </div>
+        <div class="button-two"><button type="button" class="sign-down">Sign down</button>
+        </div>
+    </div>
+    <footer>
+        <div class="footer">Copyright © The Odin Project 2022</div>
+    </footer>
 </body>
+
 </html>
