--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
                 </svg></div>
             <div class="links">
                 <ul>
-                    <li><a href="#">Header Link one</li></a>
-                    <li><a href="#">Header Link two</li></a>
-                    <li><a href="#">Header Link three</li></a>
+                    <li><a href="#">About</li></a>
+                    <li><a href="#">Info</li></a>
+                    <li><a href="#">Sign Up</li></a>
                 </ul>
             </div>
         </div>
